syntax = "proto3";

option go_package = "github.com/kmaskasem/grpc-authen-microservice/proto";

service AuthService{
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest{
    string email = 1;
    string password = 2;
    string name = 3;
}

message RegisterResponse{
    string message = 1;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
}

message LogoutRequest{}

message LogoutResponse{
    string message = 1;
}




